[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "nullqwertyuiop", email = "null@member.fsf.org"},
]
dependencies = [
    "textual[dev]>=0.10.1",
    "kayaku>=0.5.2",
    "black>=23.1.0",
    "isort>=5.12.0",
]
requires-python = ">=3.11"
license = {text = "AGPL v3"}
